Give Background Fetch downloads an explicit path on Android

This avoids getting the "due to missing SD card" message when trying the
feature on an Android device.

BUG=710001

Review-Url: https://codereview.chromium.org/2829443002
Cr-Commit-Position: refs/heads/master@{#465375}

Former-commit-id: 73a67a97d85aa723309374bd27283eeda1757165